GAP-2392: CSS fixes

--- a/packages/admin/src/pages/build-application/[applicationId]/components/Sections.module.scss
+++ b/packages/admin/src/pages/build-application/[applicationId]/components/Sections.module.scss
@@ -1,15 +1,5 @@
 @import '~govuk-frontend/govuk/helpers/colour';
 
-.sections-delete-section-btn-mrg-left {
-    font-size: large;
-    margin-left: 20px;
-    line-height: 40px;
-}
-
-.sections-cta-margin-bottom {
-    margin-bottom: -20px;
-}
-
 .caption {
     background-color: govuk-colour("light-grey");
 }
